Optimization for Lighthouse

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap"
-      rel="stylesheet"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="App where you can add some data and see the graph."
     />
     <title>Data visualization</title>
   </head>
